--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,27 @@
-flask==3.0.2
-python-dotenv==1.0.1
+aiohttp==3.9.1
+beautifulsoup4==4.12.2
+Flask==3.0.0
+pandas==2.1.4
+pyarrow==14.0.1
 requests==2.31.0
-openai==1.12.0
-flask-cors==4.0.0
-pandas==2.2.0
-beautifulsoup4==4.12.3
-playwright==1.42.0
-fake-useragent==1.4.0
+selenium==4.16.0
+lxml==4.9.3
+python-dotenv==1.0.0
+aiosignal==1.3.1
+attrs==23.1.0
+blinker==1.7.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+frozenlist==1.4.1
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+multidict==6.0.4
+numpy==1.26.2
+soupsieve==2.5
+tzdata==2023.3
+urllib3==2.1.0
+Werkzeug==3.0.1
+yarl==1.9.4
